Convert to Angular2 app

--- a/package.json
+++ b/package.json
@@ -3,18 +3,31 @@
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "angular2": "^2.0.0-beta.3",
+    "es6-promise": "^3.0.2",
+    "express": "^4.13.4",
+    "http-server": "^0.8.5",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "^5.0.0-beta.1",
+    "systemjs": "^0.19.20",
+    "zone.js": "^0.5.13"
+  },
   "devDependencies": {
-    "gulp": "~3.9.0",
     "del": "^2.2.0",
+    "gulp": "~3.9.0",
     "gulp-clean": "^0.3.1",
+    "gulp-coffee": "~2.3.1",
     "gulp-concat": "~2.6.0",
     "gulp-livereload": "^3.8.1",
     "gulp-npm-files": "^0.1.3",
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-coffee": "~2.3.1",
-    "gulp-uglify": "~1.5.1"
+    "gulp-tslint": "^4.3.1",
+    "gulp-typescript": "^2.10.0",
+    "gulp-uglify": "^1.5.1",
+    "tslint": "^3.3.0",
+    "typings": "^0.6.6"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
